# STC-Task

./: .gitignore  CMakeLists.txt  README.md  main.cpp  measure.xlsx  test.cpp  timeMeasure.cpp
SMA/: CMakeLists.txt  SMA.cpp  SMA.hpp
